--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
+  firebase_core: ^1.10.6
+  firebase_auth: ^3.3.4
+  file_picker: ^4.3.0
+  permission_handler: ^8.3.0
+  firebase_storage: ^10.2.4
+  firebase_database: ^9.0.4
+  cloud_firestore: ^3.1.5
 
 dev_dependencies:
   flutter_test:
