--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_storage: ^10.2.4
   firebase_database: ^9.0.4
   cloud_firestore: ^3.1.5
+  google_sign_in: ^5.2.1
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
